Created rows for temperature, humidity, wind speed, and UV index

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <!--Search bar-->
   <div class="container">
     <div class="search">
-        <div class="row">
-            <h1>Search for a City:</h1>
-        </div>
-        <div class="row">
-            <input type="text" class="searchInput" placeholder="Your City">
-            <button type="submit" class="searchBtn">
-            <i class="fas fa-search"></i>
-            </button>
-        </div>
-        <div class="historyItems"></div>
+      <div class="row">
+        <h1>Search for a City:</h1>
+      </div>
+    <div class="row">
+        <input type="text" class="searchInput" placeholder="Your City">
+        <button type="submit" class="searchBtn">
+        <i class="fas fa-search"></i>
+        </button>
     </div>
+    <div class="historyItems"></div>
+   </div>
 
     <div class="col-two-container">
         <div class="forecast">
@@ -39,6 +39,24 @@
                 <h1 class="currentDate"></h1>
                 <img class="weatherIcon"></img>
             </div>
+        </div>
+    <!--Displayed rows of weather information -->
+    <div class="row">
+        <p class="temp">Temperature:</p>
+    </div>
+
+    <div class="row">
+        <p class="humidity">Humidity:</p>
+    </div>
+
+    <div class="row">
+        <p class="windSpeed">Wind Speed:</p>
+    </div>
+
+    <div class="row">
+        <p class="uvIndex">UV Index:</p>
+    </div>
+</div>
 
     
 </body>
