Created five-day forcast container

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
       <div class="row">
         <h1>Search for a City:</h1>
       </div>
-    <div class="row">
-        <input type="text" class="searchInput" placeholder="Your City">
-        <button type="submit" class="searchBtn">
-        <i class="fas fa-search"></i>
-        </button>
-    </div>
-    <div class="historyItems"></div>
+
+        <div class="row">
+          <input type="text" class="searchInput" placeholder="Your City">
+          <button type="submit" class="searchBtn">
+          <i class="fas fa-search"></i></button>
+        </div>
+
+        <div class="historyItems">
+        </div>
    </div>
 
     <div class="col-two-container">
@@ -40,24 +42,31 @@
                 <img class="weatherIcon"></img>
             </div>
         </div>
-    <!--Displayed rows of weather information -->
-    <div class="row">
-        <p class="temp">Temperature:</p>
+        <!--Displayed rows of weather information -->
+        <div class="row">
+            <p class="temp">Temperature:</p>
+        </div>
+
+        <div class="row">
+            <p class="humidity">Humidity:</p>
+        </div>
+
+        <div class="row">
+            <p class="windSpeed">Wind Speed:</p>
+        </div>
+
+        <div class="row">
+            <p class="uvIndex">UV Index:</p>
+        </div>
     </div>
 
-    <div class="row">
-        <p class="humidity">Humidity:</p>
+    <!--Cards for 5 day forcast-->
+    <div class="five-day-container">
+        <h1>5-Day Forecast:</h1>
+    <div class="card-row"></div>
     </div>
-
-    <div class="row">
-        <p class="windSpeed">Wind Speed:</p>
     </div>
-
-    <div class="row">
-        <p class="uvIndex">UV Index:</p>
     </div>
-</div>
-
     
 </body>
 </html>
