--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 
-    <!--Scripts-->
-    <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./assets/css/style.css">
+ <!--Scripts-->
+ <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+ <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+ <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+ 
+ <title>Weather Dashboard</title>
 </head>
 <body>
+
   <header class="header">
     <h1>Weather Dashboard</h1>
   </header>
@@ -24,49 +27,50 @@
         <h1>Search for a City:</h1>
       </div>
 
-        <div class="row">
-          <input type="text" class="searchInput" placeholder="Your City">
-          <button type="submit" class="searchBtn">
-          <i class="fas fa-search"></i></button>
-        </div>
+      <div class="row">
+        <input type="text" class="searchInput" placeholder="Your City">
+        <button type="submit" class="searchBtn">
+        <i class="fas fa-search"></i>
+        </button>
+      </div>
 
-        <div class="historyItems">
-        </div>
-   </div>
+         <div class="historyItems">
+         </div>
+
+    </div>
 
     <div class="col-two-container">
-        <div class="forecast">
-            <div class="row">
-                <h1 class="cityName">City Name</h1>
-                <h1 class="currentDate"></h1>
-                <img class="weatherIcon"></img>
-            </div>
-        </div>
+      <div class="forecast">
+        <div class="row">
+          <h1 class="cityName">City Name</h1>
+          <h1 class="currentDate"></h1>
+          <img class="weatherIcon"></img>
         <!--Displayed rows of weather information -->
-        <div class="row">
-            <p class="temp">Temperature:</p>
         </div>
 
         <div class="row">
-            <p class="humidity">Humidity:</p>
+          <p class="temp">Temperature:</p>
+        </div>
+        <div class="row">
+          <p class="humidity">Humidity:</p>
+        </div>
+        <div class="row">
+          <p class="windSpeed">Wind Speed:</p>
+        </div>
+        <div class="row">
+          <p class="uvIndex">UV Index:</p>
         </div>
 
-        <div class="row">
-            <p class="windSpeed">Wind Speed:</p>
-        </div>
-
-        <div class="row">
-            <p class="uvIndex">UV Index:</p>
-        </div>
     </div>
-
-    <!--Cards for 5 day forcast-->
+          <!--Cards for 5 day forcast-->
     <div class="five-day-container">
-        <h1>5-Day Forecast:</h1>
-    <div class="card-row"></div>
+      <h1>5-Day Forecast:</h1>
+        <div class="card-row">
+        </div>
     </div>
-    </div>
-    </div>
-    
+</div>
+ </div>
+ 
 </body>
+<script src="./assets/js/javascript.js"></script>
 </html>
