Added header background image, animation, and more styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="row">
-        <input type="text" class="searchInput" placeholder="Your City">
+        <input type="text" class="searchInput" placeholder="Type a City Here...">
         <button type="submit" class="searchBtn">
         <i class="fas fa-search"></i>
         </button>
@@ -65,6 +65,7 @@
           <!--Cards for 5 day forcast-->
     <div class="five-day-container">
       <h1>5-Day Forecast:</h1>
+      <hr>  
         <div class="card-row">
         </div>
     </div>
