--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="col-two-container">
       <div class="forecast">
         <div class="row">
-          <h1 class="cityName">City Name</h1>
+          <h1 class="cityName">City Name:</h1>
           <h1 class="currentDate"></h1>
           <img class="weatherIcon"></img>
         <!--Displayed rows of weather information -->
@@ -64,7 +64,7 @@
     </div>
           <!--Cards for 5 day forcast-->
     <div class="five-day-container">
-      <h1>5-Day Forecast:</h1>
+      <h1>5-Day Forecast Here:</h1>
       <hr>  
         <div class="card-row">
         </div>
