Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       <div class="forecast">
         <div class="row">
           <h1 class="cityName">City Name:</h1>
+          <br><br>
           <h1 class="currentDate"></h1>
-          <img class="weatherIcon"></img>
+          <img class="weatherIcon" alt="weather-icon">
         <!--Displayed rows of weather information -->
         </div>
 
@@ -71,7 +72,6 @@
     </div>
 </div>
  </div>
- 
+ <script src="./assets/js/javascript.js"></script>
 </body>
-<script src="./assets/js/javascript.js"></script>
 </html>
