--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
- 
- <title>Weather Dashboard</title>
 </head>
+
+<title>Weather Dashboard</title>
+
 <body>
 
   <header class="header">
@@ -43,9 +44,8 @@
       <div class="forecast">
         <div class="row">
           <h1 class="cityName">City Name:</h1>
-          <br><br>
           <h1 class="currentDate"></h1>
-          <img class="weatherIcon" alt="weather-icon">
+          <img class="weatherIcon">
         <!--Displayed rows of weather information -->
         </div>
 
