--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather Dashboard</title>
 
- <!--Scripts-->
- <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
- <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
- <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <!-- External links-->
+  <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <title>Weather Dashboard</title>
 
 <body>
 
+  <!-- Animated header-->
   <header class="header">
     <h1>Weather Dashboard</h1>
   </header>
 
-  <!--Search bar-->
+  <!--Search bar on left side of the page-->
   <div class="container">
     <div class="search">
       <div class="row">
@@ -35,20 +36,21 @@
         </button>
       </div>
 
-         <div class="historyItems">
-         </div>
-
+      <!-- Displays previously found searches-->
+      <div class="historyItems">
+      </div>
     </div>
 
+    <!-- Container for city name-->
     <div class="col-two-container">
       <div class="forecast">
         <div class="row">
           <h1 class="cityName">City Name:</h1>
           <h1 class="currentDate"></h1>
           <img class="weatherIcon">
-        <!--Displayed rows of weather information -->
         </div>
 
+        <!-- Rows for city's weather information -->
         <div class="row">
           <p class="temp">Temperature:</p>
         </div>
@@ -62,16 +64,17 @@
           <p class="uvIndex">UV Index:</p>
         </div>
 
+      </div>
+
+      <!-- Cards for 5-day forcast-->
+      <div class="five-day-container">
+        <h1>5-Day Forecast Here:</h1>
+          <hr>  
+            <div class="card-row">
+            </div>
+      </div>
     </div>
-          <!--Cards for 5 day forcast-->
-    <div class="five-day-container">
-      <h1>5-Day Forecast Here:</h1>
-      <hr>  
-        <div class="card-row">
-        </div>
-    </div>
-</div>
- </div>
- <script src="./assets/js/javascript.js"></script>
+  </div>
+<script src="./assets/js/javascript.js"></script>
 </body>
 </html>
